--- a/prototypes/ui/assets/scss/pages/_piece.scss
+++ b/prototypes/ui/assets/scss/pages/_piece.scss
@@ -34,6 +34,7 @@ body#piece{
 		button{
 			position: absolute;
 			height: 100%;
+			max-height: 75vh;
 			width: 33.333%;
 			top: 0;
 			background: transparent;
@@ -51,7 +52,7 @@ body#piece{
 
 		a#to-details{
 			position: absolute;
-			bottom: $baseline*-1;
+			bottom: $baseline;
 			left: 50%;
 			transform: translateX(-50%);
 			@include f1-s0();
@@ -60,6 +61,11 @@ body#piece{
 			stroke-width: 1.5px;
 			transition: .5s ease;
 			transform: translateY(0);
+			display: none;
+			@include for-size(desktop){
+				display: inline-block;
+				bottom: $baseline*-1;
+			}
 
 			@keyframes upDown{
 				0%{ transform: translateY(0);}
