--- a/prototypes/ui/assets/scss/component/_buttons.scss
+++ b/prototypes/ui/assets/scss/component/_buttons.scss
@@ -12,7 +12,7 @@ input.on-off{
   outline: none;
   border-radius: 1em;
   box-shadow: inset 0 0 0.5 gray;
-  transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out, color 0s;
   border: 1px solid currentColor;
   overflow: hidden;
   cursor: pointer;
@@ -43,12 +43,12 @@ input.on-off{
       top: 1px;;
       stroke-width : 1px;
       transform: scale(1);
-      transition: transform 0.25s 0 ease;
+      transition: all 0s 0s, transform 0.25s 0 ease;
       @media(-webkit-min-device-pixel-ratio: 1.5){
         stroke-width: .75px;
         top: -.5px
       }
-      .second{ opacity: 0; transition: .1s ease-in-out;}
+      .second{ opacity: 0; transition:  color 0s, opacity .1s ease-in-out;}
     }
   }
 }
